# dpcrt

./: CMakeLists.txt  LICENSE.txt  Makefile  build_config.h  dpcc.h  dpcrt.h  dpcrt_algorithms.c  dpcrt_algorithms.h  dpcrt_allocators.c  dpcrt_allocators.h  dpcrt_atomics.h  dpcrt_compiler.h  dpcrt_data_structures.c  dpcrt_data_structures.h  dpcrt_dll_glue_code.h  dpcrt_endian.h  dpcrt_hash.c  dpcrt_lexer.h  dpcrt_lexer_builtin_logic.c  dpcrt_lexer_builtin_logic.h  dpcrt_lexer_core.h  dpcrt_math.c  dpcrt_math.h  dpcrt_mem.c  dpcrt_mem.h  dpcrt_pal.h  dpcrt_queue.h  dpcrt_stack.h  dpcrt_stats.c  dpcrt_stats.h  dpcrt_stdc.h  dpcrt_streams.h  dpcrt_strings.h  dpcrt_sync.c  dpcrt_sync.h  dpcrt_threads.c  dpcrt_threads.h  dpcrt_types.c  dpcrt_types.h  dpcrt_utils.h  (+10 more)
PLATFORM_SPECIFIC/: dpcrt_pal_linux.c  dpcrt_pal_win32.c
lexer/: dpcrt_lexer.c  dpcrt_lexer.h  dpcrt_lexer_builtin_logic.c  dpcrt_lexer_builtin_logic.h
math/: dpcc_math.h  statistics.c  statistics.h
platform/: compiler.h  dpcrt_compiler.h  dpcrt_mem.c  dpcrt_mem.h  dpcrt_pal.h  dpcrt_streams.c  mem.c  mem.h  mem_layer.c  mem_layer.h  pal.c  pal.h  pal_linux.c  pal_win32.c  streams.c  streams.h
std/: malloc.h  stdio.h  string.h
stdc/: errno.h  malloc.h  stdarg.h  stdio.h  string.h  time.c  time.h
utils/: hash.c  hash.h  math-utils.c  math-utils.h  mem_layout.c  mem_layout.h  types.c  types.h  utils.h
